syntax = "proto3";

service Receiver {
  rpc SendMessage (ChatMessage) returns (ReceiverReply) {}
}

message ChatMessage {
  string text = 1;      
  int64	author_id = 2; 
  int32 timestamp = 3;

}

message ReceiverReply {
  string status = 1;
}
